# hello-rufi

./: Cargo.toml  README.md
commons/: Cargo.toml
commons/src/: device_state.rs  gradient.rs  lib.rs
commons/tests/: test.rs
distributed-gradient/: Cargo.toml
distributed-gradient/coordinator/: Cargo.toml
distributed-gradient/coordinator/src/: main.rs
distributed-gradient/src/: lib.rs  mailbox.rs  main.rs  message.rs  network.rs  platform.rs  state.rs
distributed-gradient/src/mailbox/: factory.rs
distributed-gradient/src/message/: message_queue.rs
distributed-gradient/src/message/message_queue/: deque.rs
distributed-gradient/src/network/: factory.rs  implements.rs
distributed-gradient/src/state/: states_manager.rs
local-gradient/: Cargo.toml
local-gradient/src/: main.rs
rf-distributed/: Cargo.toml
rf-distributed/src/: network.rs  platform.rs
rf-distributed/src/network/: factory.rs
src/: device_state.rs  gradient.rs  main.rs
tests/: test.rs
